tests/baselines/reference/objectLiteralContextualTyping.errors.txt
tests/cases/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts(29,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'unknown', but here has type '{}'.


==== tests/cases/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts (1 errors) ====
    // In a contextually typed object literal, each property value expression is contextually typed by
    //      the type of the property with a matching name in the contextual type, if any, or otherwise
    //      for a numerically named property, the numeric index type of the contextual type, if any, or otherwise
    //      the string index type of the contextual type, if any.
    
    interface Item {
        name: string;
        description?: string;
    }
    
    declare function foo(item: Item): string;
    declare function foo(item: any): number;
    
    var x = foo({ name: "Sprocket" });
    var x: string;
    
    var y = foo({ name: "Sprocket", description: "Bumpy wheel" });
    var y: string;
    
    var z = foo({ name: "Sprocket", description: false });
    var z: number;
    
    var w = foo({ a: 10 });
    var w: number;
    
    declare function bar<T>(param: { x?: T }): T;
    
    var b = bar({});
    var b: {};
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'b' must be of type 'unknown', but here has type '{}'.
!!! related TS6203 tests/cases/conformance/expressions/contextualTyping/objectLiteralContextualTyping.ts:28:5: 'b' was also declared here.
    